# resistElevatorDoorDetection

./: CMakeLists.txt  README.md  build.sh  detectInfo.json  export_yolov8.py  ji.py  split_train_val.py  train_yolov8.py  train_yolov8.sh  voc_label.py
include/: common.h  yolov8.h
src/: common.cpp  main.cpp  yolov8.cpp
